fix #516: scrolling on the open screen on mobile

--- a/app/styles/areas/_open.scss
+++ b/app/styles/areas/_open.scss
@@ -7,6 +7,10 @@
     justify-content: center;
     background: var(--background-color);
 
+    .mobile & {
+        overflow-y: auto;
+    }
+
     &__icons {
         display: flex;
         align-items: stretch;
@@ -139,7 +143,9 @@
         flex-direction: column;
         justify-content: flex-start;
         position: relative;
-        width: 30em;
+        @include nomobile {
+            width: 30em;
+        }
         .open--drag & {
             display: none;
         }
